2004-09-29  Francisco Gimeno <kikov@kikov.org>

	* gforge-plugin-scmsvn/include/SVNPlugin.class,
	gforge-plugin-scmccase/include/CcasePlugin.class:
	add a new hook to get the plugin published as scm_plugin.

2004-09-23  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed [#905] Incorrect DB transaction handling in ArtifactType.class
	reported by Diggie Bell
	* fixed [#904] Possible sort order issue on My Page and 
	[#828] Duplicate items on My Page thanks to Diggy Bell
	* updated gforge-plugin-scmcvs to CVSWeb 3.0.2. Made author name point
	to corresponding GForge user page

2004-09-23  Francisco Gimeno <kikov@kikov.org>

	Fixes [#911]:
	* www/tracker/taskmgr.php, www/tracker/mod-limited.php,
	www/tracker/mod.php, www/tracker/taskmgr.php: put Bug Numbers in 
	a consistent way: ie: [#BUG] instead of [ #BUG ]. cvstracker-plugin
	work this way.

2004-09-21  Guillaume Smet <guillaume-gforge@smet.org>

	* applied [#677] add documentation comments for the plugin functions
	in User.class and Group.class by Lars Ehrhardt
	* applied [#899] Fixes for installation guide by Ognyan Kulev
	* applied [#893] HTML fixes for docs/webalizer-HOWTO.html by Ognyan Kulev
	* applied [#898] Minor corrections (export script www/export/tracker/php)
	by Mathieu Peltier and improved the code

2004-09-21  Tim Perdue <tim@gforge.org>

	* Unified crontabs to crontab.in
	* Greatly updated and expanded INSTALL
	* Massive additions and debugging on www/soap/*

2004-09-20  Christian Bayle <bayle@aist.enst.fr>
	
	* Moved some of the ./www/register/projectinfo.php register logic to
	Group.class

2004-09-18  Guillaume Smet <guillaume-gforge@smet.org>

	* removed typos from Base.tab introduced by tracker boxes patch
	* internationalized admin/admin_table.php and so all admin/edit_*.php
	* updated french translation

2004-09-15  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed [#552] by improving language negotiation

2004-09-14  Tim Perdue <tim@gforge.org>

	* Updated theme for 4.0
